<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uwaterloo.proxtimeity.ChooseTypeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/select_reminder"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/Button02"
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:text="@string/location"
            android:layout_marginBottom="15dip"
            android:textSize="20sp"
            android:onClick="goToLocationActivity"
            />

        <Button
            android:id="@+id/Button03"
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:text="@string/time"
            android:layout_marginTop="15dip"
            android:textSize="20sp"
            android:onClick="goToTimeActivity"
            />

    </LinearLayout>

</RelativeLayout>
