<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uwaterloo.proxtimeity.CreateLocationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:textSize="20sp"
            android:text="Create a Location-Based Reminder"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/locations_spinner"
            android:entries="@array/location_array"
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:text="Time"
            android:layout_marginTop="15dip"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:hint="@string/location_text_prompt"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:text="@string/checkbox_string"/>
        
        <!--<DatePicker-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"></DatePicker>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:textSize="20sp"
            android:text="@string/remindMeBefore"/>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            android:layout_weight="4"
            android:layout_height="0dp" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:textSize="20sp"
            android:text="@string/save_location_reminder"
            android:onClick="saveLocationReminder"
            />

    </LinearLayout>
</ScrollView>
